...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo-1499479387933-4567e710809c" translatesAutoresizingMaskIntoConstraints="NO" id="woQ-kk-2Zs">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9aS-Lp-IsT">
                                <rect key="frame" x="16" y="391" width="382" height="48"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Get weather info"/>
                                <connections>
                                    <action selector="getWeatherInfoBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O87-fk-zk6"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tallinn, Estonia" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RSx-bs-B8r">
                                <rect key="frame" x="16" y="353" width="382" height="30"/>
...
